# genesis-architect

./: .coverage  .gitignore  ARCHITECTURE_EVIDENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  ENFORCEMENT_DEPTH.md  FEEDBACK.md  FINAL_VALIDATION_REPORT.md  HARDENING.md  LAUNCH_COPY.md  LICENSE  README.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v5.1.0.md  SECURITY.md  SELF_PITFALLS.md  SELF_RESEARCH.md  SELF_ROADMAP.md  SKILL.md  V5_ROADMAP.md  build_demo.py  demo.yml  generate_gif.py  manifest.json  plugin.json  pyproject.toml  pyproject_standalone.toml  sonar-project.properties
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
assets/: ARCHITECTURE_EVIDENCE.template.md  PITFALLS.template.md  RESEARCH.template.md  ROADMAP.template.md
batch-rename/: PITFALLS.md  RESEARCH.md  ROADMAP.md  pyproject.toml
batch-rename/.github/workflows/: ci.yml
batch-rename/batch_rename/: cli.py  config.py  exceptions.py  log.py  patterns.py  renamer.py  sanitizer.py
batch-rename/tests/: test_renamer.py
case_studies/: chrome_extension.md  cli_tool.md  discord_bot.md  fastapi_api.md  mcp_server.md
docs/: index.html  show_hn_post.md
docs/_demos/: DESIGN_SYSTEM.md  _build.py  bun.html  clerk.html  genesis.html  mercury.html  prisma.html  railway.html  raycast.html  supabase.html
docs/adr/: 001-initial-architecture.md
docs/assets/: index-B6UYhHlQ.css  index-BeAs86kF.css  index-BnhFewx2.css  index-C-7KRtCe.css  index-C8Kyhrsn.js  index-CKi68tUB.css  index-CPJqSxV6.js  index-CVOiszMH.js  index-D2XpuIcw.js  index-DWzrmSnT.css  index-Db3onx5w.js  index-DeDxnUlg.js  index-Tg5kx9y-.js
evals/: README.md  quality_rubric.md  test_queries.json
examples/python-cli/: .gitignore  ARCHITECTURE_EVIDENCE.md  PITFALLS.md  RESEARCH.md  ROADMAP.md  pyproject.toml  sonar-project.properties
examples/python-cli/.genesis/: evidence.json
examples/python-cli/.github/workflows/: ci.yml
examples/python-cli/docs/adr/: 001-initial-architecture.md
examples/python-cli/src/python_cli/: cli.py  core.py
examples/python-cli/src/python_cli/utils/: security.py
examples/python-cli/tests/: test_core.py  test_security.py
examples/typescript-cli/: PITFALLS.md  README.md  RESEARCH.md  ROADMAP.md
references/: OPEN_SOURCE_INTELLIGENCE.md  architecture-patterns.md  folder-structures.toml  mcp-strategy.md  security-templates.md
scripts/: drift_detector.py  env_probe.py  eval_runner.py  evidence_pack.py  feedback.py  genesis_state.py  genesis_subcommands.py  issue_miner.py  mitigation_enforcer.py  pitfall_coverage_check.py  research_validator.py  resolve_engine.py  scaffold_generator.py  scaffold_smoke_test.py  validate_example_urls.py  vault.py
src/genesis_architect/: __init__.py  cli.py  config.py
src/genesis_architect/core/: antipattern_detector.py  architecture_scorer.py  audit_inference.py  c4_generator.py  companion.py  drift_detector.py  env_probe.py  evidence_pack.py  feedback.py  fork_analyzer.py  free_pitfalls.py  genesis_state.py  genesis_subcommands.py  github.py  import_graph.py  issue_miner.py  llm.py  mitigation_enforcer.py  nlu_gate.py  pitfall_coverage_check.py  pro_bridge.py  publish_agent.py  research_validator.py  resolve_engine.py  scaffold_generator.py  scaffold_smoke_test.py  scaffolder.py  vault.py
tests/: test_antipattern_detector.py  test_architecture_scorer.py  test_c4_generator.py  test_evidence_pack.py  test_free_pitfalls.py  test_genesis_state.py  test_github_rate_limit.py  test_import_graph.py  test_mitigation_enforcer.py  test_new_features.py  test_new_scripts.py  test_partner_mode.py  test_pitfall_coverage_check_platform.py  test_pr13_scripts.py  test_pro_bridge.py  test_publish_agent.py  test_research_validator.py  test_resolve_engine.py  test_scaffold_generator.py  test_scaffold_smoke_test.py  test_vault_and_resolve.py
tmp/podcast-dl/: pyproject.toml
tmp/podcast-dl/src/podcast_dl/: __init__.py  cli.py
tmp/podcast-dl/src/podcast_dl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tmp/podcast-dl/src/podcast_dl/adapters/: config_adapter.py
tmp/podcast-dl/src/podcast_dl/core/: downloader.py  fetcher.py  tracker.py
tmp/podcast-dl/src/podcast_dl/services/: feed_service.py
tmp/podcast-dl/src/podcast_dl/utils/: security.py
tmp/podcast-dl/tests/unit/: test_fetcher.py  test_security.py  test_tracker.py
validation/: VALIDATION_RESULTS.md
validation/chrome-extension/claude-only/: MANIFEST.md  background.js  manifest.json  popup.html  popup.js
validation/chrome-extension/genesis/: MANIFEST.md  PITFALLS.md  package-lock.json  package.json
validation/cli-tool/claude-only/: MANIFEST.md  cli.py  core.py
validation/cli-tool/genesis/: MANIFEST.md  PITFALLS.md
validation/discord-bot/claude-only/: MANIFEST.md  bot.py
validation/discord-bot/genesis/: MANIFEST.md  PITFALLS.md
validation/fastapi-api/claude-only/: MANIFEST.md  main.py  models.py  requirements.txt
validation/fastapi-api/genesis/: MANIFEST.md  PITFALLS.md  pyproject.toml
validation/fastapi-api/genesis/src/: database.py  deps.py  main.py  models.py
validation/fastapi-api/genesis/tests/: test_canary.py  test_database.py  test_deps.py
validation/mcp-server/claude-only/: MANIFEST.md  server.py
(+29 files in other folders)
