[project]
name = "genesis-architect"
version = "2.1.0"
description = "The AI Software Architect that researches before it builds."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S"]
ignore = [
    "S101",   # assert in tests is fine
    "S310",   # urllib.request.urlopen - we validate inputs manually
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
