[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-architect"
version = "3.0.0"
description = "The AI Software Architect that researches before it builds."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "anthropic>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "pytest-cov>=5"]

[project.scripts]
genesis = "genesis_architect.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S"]
ignore = [
    "S101",   # assert in tests is fine
    "S310",   # urllib.request.urlopen - we validate inputs manually
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
