[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-architect"
version = "5.4.1"
description = "The AI Software Architect that researches before it builds - and partners with you on every major decision."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "anthropic>=0.40,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "pytest-cov>=5"]

[project.scripts]
genesis = "genesis_architect.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S"]
ignore = [
    "S101",   # assert in tests is fine
    "S310",   # urllib.request.urlopen - we validate inputs manually
    "S607",   # partial executable path - git/python are standard system executables
    "S110",   # try-except-pass - intentional silent fallback in subprocess helpers
    "S112",   # try-except-continue - intentional skip on unreadable workflow files
    "S602",   # shell=True - commands are built from validated templates, not user input
    "S603",   # subprocess with trusted internal paths (sys.executable + project scripts)
    "UP031",  # % format in GraphQL query string - not a string format, embedded in GQL
    "E501",   # line too long - docstrings and LLM prompts are exempt
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"scripts/*.py" = ["E501"]
