[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "batch-rename"
version = "0.1.0"
description = "A Python CLI for batch renaming files safely"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
batch-rename = "batch_rename.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
