[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7"]

[project.scripts]
python-cli = "python_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
