[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-dl"
version = "0.1.0"
description = "Download podcast episodes from RSS feeds"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.7",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
]

[project.scripts]
podcast-dl = "podcast_dl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
