[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "task-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "S"]
